fixing line-height overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,11 @@
 .list-group .list-group-item {
   border: none!important;
   padding-left: 0px!important;
-  line-height: 12px!important;
+  line-height: 1.5!important;
 }
 
 .contact-info {
-  line-height: 7px;
+  line-height: .5;
   font-weight: 600!important;
 }
 
